1999-12-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: help update; support get -a for ascii mode;
	  don't use ascii mode for zcat and zmore.
	* CopyJob.cc, CopyJob.h: ascii support in CopyJobEnv.
	* FileCopy.cc: init can_seek0.
	* MirrorJob.cc: use CopyJob.

1999-12-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* CatJob.cc, ChangeLog, CopyJob.cc, CopyJob.h, FileAccess.cc,
	  FileAccess.h, FileCopy.cc, FileCopy.h, Filter.cc, Filter.h,
	  GetJob.cc, GetJob.h, MirrorJob.cc, commands.cc, mgetJob.cc,
	  mgetJob.h, pgetJob.cc, pgetJob.h: lots of changes - get, mget, pget
	  now work with new FileCopyEnv class.

1999-12-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: support ascii conversion.
	* commands.cc: ignore -u for compatibility.
	* CmdExec.cc: beware of stale pointers, use job number instead.

1999-12-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc, CatJob.cc, CatJob.h: add ascii mode.
	* HttpDir.cc: handle ~ as absolute path in check for icon.

1999-12-22  Robert de Bath <rdebath@poboxes.com>

	* FileAccess.cc, FileAccess.h, Http.cc, LocalAccess.cc, NetAccess.cc,
	  ftpclass.cc: rehash debug levels.

1999-12-22  Alexander V. Lukyanov  <lav@yars.free.net>

	* Job.cc: don't show job info as ? if there is no info.
	* CatJob.cc, CatJob.h: use new architecture w/ CopyJobEnv.
	* CopyJob.cc, CopyJob.h: (CopyJobEnv) new class; misc tweaks.
	* FileCopy.cc, FileCopy.h: add features for cat command.
	* commands.cc: new cat command creation.

1999-12-21  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: (DataAbort) Disconnect in copy mode if ABOR is disabled.

1999-12-21  Robert de Bath <rdebath@poboxes.com>

	* NetAccess.cc: correction for ReconnectAllowed

1999-12-20  Alexander V. Lukyanov  <lav@yars.free.net>

	* CopyJob.cc, CopyJob.h: add methods for creating different copiers:
	  NewGet, NewPut, NewEcho.
	* commands.cc: use CopyJob::NewEcho.